Fix spacing under sidebar accross devices, blockquote cite

--- a/css/typography.css
+++ b/css/typography.css
@@ -252,7 +252,9 @@ body {
 }
 .typography blockquote cite {
 	margin-top: 10px;
-  font-family: font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  text-indent: 0;
+  display: block;
 }
 .typography pre {
   background: #F7F7F7;
